plugins/groovy/testdata/highlighting/pre30/identityOperators.groovy
a <error descr="Operator '===' is not supported in current version">===</error> b
3 <error descr="Operator '!==' is not supported in current version">!==</error> 42
